[package]
name = "radiocore"
description = "Main asset handler for RadioSystem"
authors = ["r6915ee <astergthefourth@gmail.com>"]
license = "MIT"
categories = ["games"]
repository = "https://codeberg.org/r6915ee/radiomare"
keywords = ["fnf"]
version = "0.1.0"
edition = "2024"

[dependencies]
ron = "0.11.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
