[package]
name = "radiomare"
authors = ["r6915ee <astergthefourth@gmail.com>"]
description = "One MANIAcal rhythm game"
version = "0.1.0"
license = "MIT"
repository = "https://codeberg.org/r6915ee/radiomare"
categories = ["games", "command-line-utilities"]
keywords = ["game", "games", "mod"]
edition = "2024"

[dependencies]
radiocore = { version = "0.1.0", path = "../radiocore" }
bevy = { version = "0.17.2", default-features = false, features = [
  "bevy_asset",
  "bevy_audio",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_window",
  "bevy_winit",
  "png",
  "vorbis",
  "x11"
] }
log = "0.4"
clang_log = "2.1.2"
crashlog = "0.1.5"

[dev-dependencies]
radiocore = { version = "0.1.0", path = "../radiocore" }

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
